// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card with footer snapshot 1`] = `
<div
  className="card"
>
  <div
    className="card-block"
  />
  <div
    className="card-footer"
  >
    Footer Text
  </div>
</div>
`;

exports[`Card with header snapshot 1`] = `
<div
  className="card"
>
  <div
    className="card-header"
  >
    Header Text
  </div>
  <div
    className="card-block"
  />
</div>
`;

exports[`Empty Card snapshot 1`] = `
<div
  className="card"
>
  <div
    className="card-block"
  />
</div>
`;
